fix legend and axis spacing on history_chart

--- a/apps/block_scout_web/assets/css/components/_dashboard-banner.scss
+++ b/apps/block_scout_web/assets/css/components/_dashboard-banner.scss
@@ -69,13 +69,14 @@ $dashboard-banner-chart-axis-font-color: $dashboard-stats-item-value-color !defa
   display: grid;
   grid-template-columns: repeat(var(--numChartData), 0.9fr);
   padding-bottom: 12px;
-  padding-left:15px;
+  padding-left:55px;
 
   .dashboard-banner-chart-legend-item {
     padding-bottom: 3px;
     padding-left: 12px;
     padding-top: 3px;
     position: relative;
+    padding-right: 20px;
 
     @include media-breakpoint-down(md) {
       display: flex;
